--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
 
   web:
     build: .
-    image: tootsuite/mastodon
+    image: rtawebteam/mastodon
     restart: always
     env_file: .env.production
     command: bash -c "rm -f /mastodon/tmp/pids/server.pid; bundle exec rails s -p 3000 -b '0.0.0.0'"
@@ -47,7 +47,7 @@ services:
 
   streaming:
     build: .
-    image: tootsuite/mastodon
+    image: rtawebteam/mastodon
     restart: always
     env_file: .env.production
     command: yarn start
@@ -62,7 +62,7 @@ services:
 
   sidekiq:
     build: .
-    image: tootsuite/mastodon
+    image: rtawebteam/mastodon
     restart: always
     env_file: .env.production
     command: bundle exec sidekiq
